--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="front"></div>
       <div class="card">
         <div class="text">
-          Thiệp mời
+          Thiệp mời Bunni Hun
           <br />
           đi study date
           6/2/2024!
