--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
       <div class="front"></div>
       <div class="card">
         <div class="text">
-          Thiệp mời Bunni Hun
-          <br />
-          đi study date
-          <br />
-          6/2/2024!
+          Pwincess Bunni Hun, will you be my Valentine?
         </div>
         <div class="heart"></div>
       </div>
@@ -35,12 +31,11 @@
     <div class="shadow"></div>
   </div>
   </div>
-  <!-- 
-  <div id='hearContainer'>
+  <div id='heartContainer'>
     <div id='shadow'></div>
     <img id='bigHeart' src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/183204/heart_(1).png" alt="heart" height="90%"
       width="90%">
-  </div> -->
+  </div>
   <script type="text/javascript" src="jquery.js"></script>
   <script type="text/javascript" src="tween.js"></script>
   <script type="text/javascript" src="heart.js"></script>
