--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     <div class="shadow"></div>
   </div>
   </div>
+
+  <button id="yes">Yesssss</button>
+  <button id="no">No :(</button>
+
   <div id='heartContainer'>
     <div id='shadow'></div>
     <img id='bigHeart' src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/183204/heart_(1).png" alt="heart" height="90%"
